new proj/src/objects/GE_HQ_Account_Plan_Meeting__c.object
<CustomObject>
    <fields>
        <fullName>GE_HQ_Account_Planning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Plan</label>
        <referenceTo>GE_HQ_Account_Plan__c</referenceTo>
        <relationshipLabel>Account Plan Meetings</relationshipLabel>
        <relationshipName>Account_Plan_Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Attendance__c</fullName>
        <label>Attendance</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Meeting_Date__c</fullName>
        <label>Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Outcome__c</fullName>
        <label>Outcome</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Account Plan Meeting</label>
    <nameField>
        <displayFormat>APM-{00000}</displayFormat>
        <label>Account Plan Meeting  Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>